--- a/acronyms.tex
+++ b/acronyms.tex
@@ -34,3 +34,13 @@
 \newacronym{POLY}{POLY}{polynomial regression}
 \newacronym{ML}{ML}{machine learning}
 \newacronym{AI}{AI}{artificial intelligence}
+\newacronym{HEDS}{HEDS}{high energy density science}
+\newacronym{BO}{BO}{bayesian optimization}
+\newacronym{WP-ELL}{WP-ELL}{Extreme Light Laboratory at the Wright-Patterson Air Force Base}
+\newacronym{GPU}{GPU}{Graphics Processing Unit}
+\newacronym{OSC}{OSC}{Ohio Supercomputer Center}
+\newacronym{SVR}{SVR}{Support Vector Regression}
+\newacronym{RBF}{RBF}{Radial Basis Function}
+\newacronym{MAPE}{MAPE}{Mean Absolute Percentage Error}
+\newacronym{MSE}{MSE}{Mean Squared Error}
+\newacronym{RMSE}{RMSE}{Root Mean Squared Error}
