--- a/ml.bib
+++ b/ml.bib
@@ -119,3 +119,16 @@
 	year = {2023},
 	url = {https://rapids.ai}
 }
+
+@inproceedings{PyTorch_2019,
+	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+	booktitle = {Advances in Neural Information Processing Systems},
+	editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+	pages = {},
+	publisher = {Curran Associates, Inc.},
+	title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+	url = {https://proceedings.neurips.cc/paper_files/paper/2019/file/bdbca288fee7f92f2bfa9f7012727740-Paper.pdf},
+	volume = {32},
+	year = {2019}
+}
+
