--- a/optimization.bib
+++ b/optimization.bib
@@ -13,6 +13,20 @@
 	abstract = {Peak ion energy is an important figure-of-merit in short-pulse, laser-driven ion acceleration and is dependent on an associated acceleration time. Standard metrics for these quantities depend on analytical results such as the self-similar fluid model or empirical models based on relatively small experimental and simulation datasets. In this work we attempt to use a data-informed neural network (NN) as a surrogate model for a large ensemble of PIC simulations to investigate an effective acceleration time. We explore the application of a stacked convolutional and recurrent NN architecture for improved regression by incorporating the time dependencies of the data into the training process. Of particular note is how pretraining a network on lower fidelity data, e.g. 1D analytical results, greatly improves the network’s ability to learn more complex, higher fidelity data. Finally, the dependency of the acceleration time on various laser and plasma parameters is explored.}
 }
 
+@article{Dolier_2022_NJoP,
+	doi = {10.1088/1367-2630/ac7db4},
+	url = {https://dx.doi.org/10.1088/1367-2630/ac7db4},
+	year = {2022},
+	month = {jul},
+	publisher = {IOP Publishing},
+	volume = {24},
+	number = {7},
+	pages = {073025},
+	author = {E J Dolier and M King and R Wilson and R J Gray and P McKenna},
+	title = {Multi-parameter Bayesian optimisation of laser-driven ion acceleration in particle-in-cell simulations},
+	journal = {New Journal of Physics}
+}
+
 @article{Loughran_2023_HPLSE, 
 	title={Automated control and optimization of laser-driven ion acceleration}, 
 	volume={11}, 
