--- a/desai.bib
+++ b/desai.bib
@@ -9,6 +9,19 @@
 	url = {https://doi.org/10.48550/arXiv.2307.16036}
 }
 
+@misc{Desai_2024_Zenodo,
+	author       = {Desai, Ronak},
+	title        = {Datasets and code from "Applying machine learning 
+	methods to laser acceleration of protons: lessons
+	learned from synthetic data"},
+	month        = {July},
+	year         = {2024},
+	publisher    = {Zenodo},
+	doi          = {10.5281/zenodo.12752264},
+	url          = {https://doi.org/10.5281/zenodo.12752264},
+	howpublished = {\url{https://doi.org/10.5281/zenodo.12752264}}
+}
+
 @misc{Desai_2024_arX,
 	title={Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data}, 
 	author={Ronak Desai and Thomas Zhang and Ricky Oropeza and John J. Felice and Joseph R. Smith and Alona Kryshchenko and Chris Orban and Michael L. Dexter and Anil K. Patnaik},
